--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,15 @@
   "type": "library",
   "description": "PHP 7 Utility Library",
   "license": "MIT",
+  
+  "version": "0.0.1",
 
   "require": {
     "php": ">=7.0.0"
+  },
+  
+  "require-dev": {
+    "phpunit/phpunit": "^6.0"
   },
 
   "autoload": {
