--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
   "license": "MIT",
   
   "require": {
-    "php": ">=7.0.0"
+    "php": ">=7.0.0",
+
+    "psr/log": "^1.0"
   },
   
   "require-dev": {
