--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,11 @@
   "require": {
     "php": ">=7.1.0",
 
-    "psr/log": "^1.0"
+    "psr/log": "^1.0",
+
+    "fluent/logger": "^1.0.0",
+    "monolog/monolog": "^1.20",
+    "slim/slim": "^3.0"
   },
   
   "require-dev": {
