--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
   "require": {
     "php": ">=7.1.0",
 
+    "psr/cache": "^1.0.1",
     "psr/log": "^1.0",
 
     "fluent/logger": "^1.0.0",
@@ -15,7 +16,9 @@
   },
   
   "require-dev": {
-    "phpunit/phpunit": "^6.0"
+    "phpunit/phpunit": "^6.0",
+
+    "cache/array-adapter": "^0.5.0"
   },
 
   "autoload": {
